# UCL-3D-Geometry

./: .gitignore  ICP_Report.docx  MS_Report.docx  README.md  build_cmd.txt
ICP/data/: chin.off  ear_back.off
ICP/src/: CMakeLists.txt  icp.cpp  icp.h  main.cpp  scene.cpp  scene.h
MS/data/: cow.off  cow_manifold2.off  cow_manifold_simple.off  dragon.off
MS/src/: CMakeLists.txt  cds.h  icp.cpp  main.cpp  ms.cpp  ms.h  scene.cpp  scene.h
MS/src/cmake/: FindLIBIGL.cmake
